# OOP

.devcontainer/: devcontainer.json
lr2/: CMakeLists.txt  main.cpp
lr2/include/: Twelve.h
lr2/src/: Twelve.cpp
lr2/test/: test.cpp
lr4/: main.cpp
lr5/: CMakeLists.txt  list.hpp  main.cpp  static-resource.hpp  test.cpp
